# kiro-security-rules

./: CHANGELOG.md  README.md  install.sh  package.json  pyproject.toml
ci/: pre-push-checks.yml
docs/: adoption-guide.md
docs/examples/: security-baseline.yml
hooks/: auto-validate-rules.json  dependency-audit-on-change.json  pre-write-secret-scan.json  verify-sbom-exists.json
mcp/: mcp.json
overlays/: hipaa-overlay.md  internal-tools-lite.md  pci-dss-overlay.md  sox-overlay.md
scripts/: bundle.sh  ci-deploy.sh  postinstall.js
src/kiro_security/: __init__.py  cli.py  validator.py
steering/always/: authentication-standards.md  logging-standards.md  secrets-management.md  supply-chain-security.md
steering/conditional/: auth-framework-patterns.md  package-ecosystem-security.md
steering/manual/: log-review.md  sbom-generation.md  security-audit.md
templates/: custom-security-rule.md.example
templates/foundational/: product.md  structure.md  tech.md
tests/: test_always_on_rules.py  test_foundational_templates.py  test_hooks_format.py  test_install.py  test_secrets_patterns.py  test_steering_format.py
