[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiro-security-rules"
version = "1.0.0"
description = "Kiro AI agent security steering rules — always-on security policies for enterprise teams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "packaging>=23.0",
    "requests>=2.31.0",
]

[project.scripts]
kiro-security-check = "kiro_security.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/kiro-steering-rules"
Source = "https://github.com/your-org/kiro-steering-rules"

[tool.hatch.build]
include = [
    "src/kiro_security/**",
    "steering/**",
    "hooks/**",
    "mcp/**",
    "ci/**",
]
artifacts = ["steering/**/*", "hooks/**/*", "mcp/**/*", "ci/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/kiro_security"]
